--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-1": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "chai": "^3.5.0",
+    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.2",
     "ejs-loader": "^0.3.0",
