--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.15.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-motion": "^0.4.7",
     "react-particles-js": "^1.4.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "react-router-transition": "0.0.6",
     "redux": "^3.6.0"
   },
   "devDependencies": {
