--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,5 @@
     "react",
     "stage-1"
   ],
-  "plugins": ["transform-class-properties"]
+  "plugins": ["transform-class-properties", "transform-decorators-legacy"]
 }
