--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "babel-preset-node7": "^1.5.0",
     "babel-register": "^6.23.0",
+    "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.0",
+    "nodemailer": "^3.1.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-motion": "^0.4.7",
@@ -24,7 +27,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.6",
